Labels and styling

--- a/writer/styles/app.scss
+++ b/writer/styles/app.scss
@@ -26,6 +26,7 @@ $enable-flex: true;
 @import '~/../substance/substance-pagestyle.css';
 
 @import 'im-blocknode';
+@import 'flexible-label';
 @import './box-with-arrow';
 @import '_fonts.scss';
 @import '_tag-list';
