--- a/writer/packages/dialog-image/scss/index.scss
+++ b/writer/packages/dialog-image/scss/index.scss
@@ -69,6 +69,11 @@ div.dialog-image-info {
                         }
                     }
 
+                    label {
+                        font-size: 85%;
+                        opacity: 0.8;
+                    }
+
                     &.dialog-image-create-date,
                     &.dialog-image-photo-date {
                         margin-bottom: 5px;
