--- a/writer/styles/im-blocknode.scss
+++ b/writer/styles/im-blocknode.scss
@@ -31,6 +31,10 @@
         &.full-width {
             margin-left:0;
         }
+
+        iframe {
+            max-width: 100% !important;
+        }
     }
 
 
