--- a/writer/components/button/scss/button.scss
+++ b/writer/components/button/scss/button.scss
@@ -81,6 +81,7 @@
 
             &:last-child {
                 border-radius: 0 3px 3px 0;
+                padding: 0;
             }
         }
     }
