--- a/writer/styles/_fonts.scss
+++ b/writer/styles/_fonts.scss
@@ -1,15 +1,38 @@
 
 
+/* Webfont: Lato-Black */@font-face {
+    font-family: 'LatoWebBlack';
+    src: url('~/../assets/fonts/Lato-Black.eot'); /* IE9 Compat Modes */
+    src: url('~/../assets/fonts/Lato-Black.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('~/../assets/fonts/Lato-Black.woff2') format('woff2'), /* Modern Browsers */
+         url('~/../assets/fonts/Lato-Black.woff') format('woff'), /* Modern Browsers */
+         url('~/../assets/fonts/Lato-Black.ttf') format('truetype');
+    font-style: normal;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
+}
+
+/* Webfont: Lato-BlackItalic */@font-face {
+    font-family: 'LatoWebBlack';
+    src: url('~/../assets/fonts/Lato-BlackItalic.eot'); /* IE9 Compat Modes */
+    src: url('~/../assets/fonts/Lato-BlackItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('~/../assets/fonts/Lato-BlackItalic.woff2') format('woff2'), /* Modern Browsers */
+         url('~/../assets/fonts/Lato-BlackItalic.woff') format('woff'), /* Modern Browsers */
+         url('~/../assets/fonts/Lato-BlackItalic.ttf') format('truetype');
+    font-style: italic;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
+}
 
 /* Webfont: Lato-Bold */@font-face {
     font-family: 'LatoWebBold';
     src: url('~/../assets/fonts/Lato-Bold.eot'); /* IE9 Compat Modes */
     src: url('~/../assets/fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('~/../assets/fonts/Lato-Bold.woff2') format('woff2'), /* Modern Browsers */
-    url('~/../assets/fonts/Lato-Bold.woff') format('woff'), /* Modern Browsers */
-    url('~/../assets/fonts/Lato-Bold.ttf') format('truetype');
+         url('~/../assets/fonts/Lato-Bold.woff2') format('woff2'), /* Modern Browsers */
+         url('~/../assets/fonts/Lato-Bold.woff') format('woff'), /* Modern Browsers */
+         url('~/../assets/fonts/Lato-Bold.ttf') format('truetype');
     font-style: normal;
-    font-weight: 900;
+    font-weight: normal;
     text-rendering: optimizeLegibility;
 }
 
@@ -17,11 +40,11 @@
     font-family: 'LatoWebBold';
     src: url('~/../assets/fonts/Lato-BoldItalic.eot'); /* IE9 Compat Modes */
     src: url('~/../assets/fonts/Lato-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('~/../assets/fonts/Lato-BoldItalic.woff2') format('woff2'), /* Modern Browsers */
-    url('~/../assets/fonts/Lato-BoldItalic.woff') format('woff'), /* Modern Browsers */
-    url('~/../assets/fonts/Lato-BoldItalic.ttf') format('truetype');
+         url('~/../assets/fonts/Lato-BoldItalic.woff2') format('woff2'), /* Modern Browsers */
+         url('~/../assets/fonts/Lato-BoldItalic.woff') format('woff'), /* Modern Browsers */
+         url('~/../assets/fonts/Lato-BoldItalic.ttf') format('truetype');
     font-style: italic;
-    font-weight: 900;
+    font-weight: normal;
     text-rendering: optimizeLegibility;
 }
 
