--- a/writer/components/button/scss/button.scss
+++ b/writer/components/button/scss/button.scss
@@ -1,10 +1,3 @@
-/*
-    Using a global button style is dangerous, as it will conflict with the Substance
-    Button component and other button elements
-
-    ATTENTION: I changed `button {` to `.sc-np-btn {`
-*/
-
 .sc-np-btn {
     display: inline-block;
     background: #0098C7;
@@ -38,6 +31,14 @@
         a.fa {
             color: #666;
         }
+    }
+
+    &.btn-icon {
+        padding: 0;
+        height: 40px;
+        line-height: 40px;
+        width: 40px;
+        text-align: center;
     }
 }
 
