--- a/writer/packages/dialog/scss/index.scss
+++ b/writer/packages/dialog/scss/index.scss
@@ -36,6 +36,9 @@
         margin: 100px auto;
         background-color: #fff;
         border-radius: 0.3rem;
+        p {
+            font-size: 1rem;
+        }
         &.small-screen {
             margin: 20px auto;
         }
@@ -73,7 +76,7 @@
         padding: 1rem 0 0 0;
 
         textarea {
-            font-size: 0.8rem;
+            font-size: 1rem;
         }
 
         div.message {
