--- a/writer/packages/load-screens/scss/start.scss
+++ b/writer/packages/load-screens/scss/start.scss
@@ -1,3 +1,18 @@
+.npw-error-container {
+    text-align: left;
+    margin-top:100px;
+    margin-left:100px;
+    font-size:1.2rem;
+    .error-label {
+        font-weight:900;
+        padding-right:5px;
+    }
+    .error-human-readable {
+        padding: 10px 0;
+        font-size:1.4rem;
+    }
+}
+
 div.npw-start-container {
     width: 100%;
     height: 100%;
