Stylefix for headereditor

--- a/writer/styles/app.scss
+++ b/writer/styles/app.scss
@@ -151,6 +151,7 @@ p {
   font-weight: 700;
 }
 
+.se-header-editor-container,
 .sc-np-writer .se-layout {
 
   margin: 40px 100px;
@@ -163,6 +164,3 @@ p {
   }
 }
 
-.se-header-editor-container {
-  margin:40px 100px;
-}
