--- a/writer/styles/app.scss
+++ b/writer/styles/app.scss
@@ -128,16 +128,6 @@ p {
 
   .se-main-section {
     flex: 1 0 auto;
-
-    .se-content {
-
-      max-width: 800px;
-      margin: 0 auto;
-
-      width: 100%;
-      height: 90%;
-      padding: 0;
-    }
   }
 }
 .sc-split-pane > .se-pane.sm-sized {
@@ -153,8 +143,9 @@ p {
 
 .se-header-editor-container,
 .sc-np-writer .se-layout {
-
-  margin: 40px 100px;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 100px 40px;
 
   @media all and (max-width: 900px) and (min-width: 551px) {
     margin: 20px 60px ;
@@ -163,4 +154,3 @@ p {
     margin: 0 60px ;
   }
 }
-
