WRIT-295: Added descriptive text for when document is invalid (in BarComponent)

--- a/writer/components/bar/scss/bar.scss
+++ b/writer/components/bar/scss/bar.scss
@@ -7,6 +7,10 @@ div.sc-np-bar {
         background-color: #FFF0F0;
     }
 
+    .invalidTextBlock {
+        color: #A00;
+    }
+
     &>div {
         height: 52px;
 
