--- a/writer/packages/npwriter/scss/_context-menu.scss
+++ b/writer/packages/npwriter/scss/_context-menu.scss
@@ -1,33 +1,71 @@
 @import '../../../styles/mixins/popup-tools';
 .sc-context-menu {
     @include popup-container();
-    .sc-tool-group {
 
+    .sc-tool-group {
         padding:0;
-        background-color: #fff;
-        button {
-            font-size: 1rem;
-            color: rgba(0, 0, 0, 0.75);
-            padding: 5px 0 5px 10px;
-            cursor: pointer;
-            border-radius: 0;
-            width: 100%;
-            display: block;
-            background-color: #fff;
-            .se-label {
-                font-weight:normal;
+
+        .sc-correction-tool {
+            &:after, &:before {
+                bottom: 100%;
+            	left: 6px;
+            	border: solid transparent;
+            	content: " ";
+            	height: 0;
+            	width: 0;
+            	position: absolute;
+            	pointer-events: none;
             }
-            &:hover {
-                background-color: darken(#fff, 5%);
-                color: rgba(0, 0, 0, 0.85);
+
+            &:after {
+                border-color: rgba(255, 255, 255, 0);
+            	border-bottom-color: #fff;
+            	border-width: 5px;
             }
-            &.active {
-                font-weight: 700;
+
+            &:before {
+                border-color: rgba(204, 204, 204, 0);
+            	border-bottom-color: #ccc;
+            	border-width: 6px;
             }
         }
 
         &.sm-target-context-menu-primary {
-            border-bottom:1px solid #efefef;
+            border-bottom: 1px solid #ddd;
+
+            button:first-child {
+                border-radius: 3px 3px 0 0;
+            }
+        }
+
+        &.sm-target-context-menu-document {
+            button:last-child {
+                border-radius: 0 0 3px 3px;
+            }
+        }
+
+        button {
+            font-size: 1rem;
+            color: rgba(0, 0, 0, 0.75);
+            cursor: pointer;
+            border-radius: 0;
+            width: 100%;
+            display: block;
+            text-align: left;
+            background-color: #fff;
+
+            .se-label {
+                font-weight: normal;
+            }
+
+            &:hover {
+                background-color: darken(#fff, 5%);
+                color: rgba(0, 0, 0, 0.85);
+            }
+
+            &.active {
+                font-weight: 700;
+            }
         }
     }
 }
