--- a/writer/packages/npwriter/scss/_overlay-menu.scss
+++ b/writer/packages/npwriter/scss/_overlay-menu.scss
@@ -38,12 +38,15 @@
                 button {
                 }
             }
+
             button {
                 background-color: #fff;
-                padding: 1px 0px;
-                margin: 3px 3px;
+                padding: 3px 4px;
+                margin: 1px;
+
                 color: #333;
                 @include border-radius(0.25rem);
+                min-width: 24px;
                 max-width: 25px;
                 max-height:25px;
                 outline: none;
