Apply selected/focused mode on non default styled isolated nodes as well

--- a/writer/styles/im-blocknode.scss
+++ b/writer/styles/im-blocknode.scss
@@ -55,7 +55,8 @@
 /*
  * Isolated node overrides
  */
- .sc-isolated-node.sm-default-style {
+ .sc-isolated-node.sm-default-style,
+ .sc-isolated-node {
     margin-bottom: 15px;
     position: relative;
 
