Added pointer cursor to delete button on tag

--- a/writer/styles/_tag-list.scss
+++ b/writer/styles/_tag-list.scss
@@ -72,7 +72,7 @@
         .tag-icon--delete {
             color: $red;
             display: inline;
-
+            cursor: pointer;
             &:hover {
                 color: lighten($red, 15%);
             }
