--- a/writer/packages/dialog-image/scss/index.scss
+++ b/writer/packages/dialog-image/scss/index.scss
@@ -1,3 +1,11 @@
+div.np-image-dialog {
+    .modal-dialog {
+        width: 100%;
+        max-width: 800px;
+        min-width: 500px;
+    }
+}
+
 div.dialog-image-info {
     display: table;
     margin: 0 15px;
@@ -7,50 +15,63 @@ div.dialog-image-info {
         vertical-align: top;
 
         &:first-child {
-            width: 25%;
-            min-width: 215px;
+            width: 35%;
+            min-width: 275px;
             padding: 0 15px 0 0;
 
             img {
                 display: block;
                 width: 100%;
                 border-radius: 4px 4px 0 0;
-                padding: 6px 6px 0 6px;
-                border: 1px solid #ddd;
-                border-bottom: none;            }
+                border-bottom: none;
+            }
 
             p {
                 font-size: 80%;
                 color: #444;
                 display: block;
-                padding: 10px 5px;
+                padding: 5px 10px 10px 10px;
                 border-radius: 0 0 4px 4px;
-                border: 1px solid #ddd;
-                border-top: none;
+                background: #f5f5f5;
 
                 strong {
                     display: block;
-                    margin: 10px 0 0 0;
+                    margin: 12px 0 2px 0;
+                    font-weight: normal;
                 }
 
                 span {
                     display: block;
+
+                    &:first-child {
+                        float: left;
+                        width: 48%;
+                        margin-right: 4%;
+                    }
+
                     &:before {
                         font-family: FontAwesome;
                         width: 20px;
                         display: inline-block;
                         text-align: center;
                         margin-right: 10px;
+                        opacity: 0.8;
                     }
 
                     &.dialog-image-width {
+                        opacity: 0.8;
+                        text-align: right;
                         &:before {
+                            margin-right: 5px;
                             content: "\f07e";
                         }
                     }
 
                     &.dialog-image-height {
+                        opacity: 0.8;
+                        text-align: left;
                         &:before {
+                            margin-right: 0;
                             content: "\f07d";
                         }
                     }
@@ -59,6 +80,7 @@ div.dialog-image-info {
                     &.dialog-image-photo-time {
                         border: 1px solid #ccc;
                         border-radius: 0.25rem;
+                        background: #fff;
 
                     input {
                             border: none;
@@ -128,6 +150,10 @@ div.dialog-image-info {
     </li>
 </ul>
 */
+
+#dialog-image-info-caption {
+    min-height: 80px;
+}
 
 .dialog-image-info.authors {
     display: block;
@@ -214,8 +240,8 @@ div.dialog-image-info {
 }
 
 .dialog-image-status {
-    background: #f5f5f5;
-    border-radius: 30px;
+    background: #e9e9e9;
+    border-radius: 3px;
     padding: 3px;
     text-align: center;
 }
