--- a/writer/styles/im-blocknode.scss
+++ b/writer/styles/im-blocknode.scss
@@ -14,8 +14,9 @@
         text-decoration: none !important;
 
         .fa {
-            color:rgb(32, 121, 220);
-            width:18px;
+            width: 18px;
+            margin-right: 5px;
+            opacity: 0.9;
         }
 
         strong {
